--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
     padding: 0;
     border: 0;
     box-sizing: border-box;
-    font-family: Arial, sans-serif;
+    font-family: Whitney, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 hr {
