--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,12 @@ hr {
     color: white;
 }
 
+img {
+    max-width:100%;
+}
+
 a {
-    color: black;
+    color:inherit;
     text-decoration: none;
 }
 
@@ -29,29 +33,45 @@ a {
 /* header */
 header {
     height: 80px;
-    background-color: #add8e6;
+    background-color: #255ee9;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .header-container {
-    background-color: #daa520;
     width: 60%;
-    border: 1px black;
-    border-top: dashed;
-    border-bottom: dashed;
     display: flex;
     justify-content: space-between;
+    align-items:center;
 }
 
 .header-logo,
 .header-links,
 .header-login {
     padding: 10px;
-    border: 1px black;
-    border-left: dashed;
-    border-right: dashed;
+}
+
+.header-logo, .header-login {
+    width:20%;
+}
+
+.header-login {
+    display:flex;
+    justify-content:flex-end;
+}
+
+.login {
+    background-color: white;
+    padding:10px;
+    border-radius:20px;
+}
+
+.header-links { 
+    display:flex;
+    justify-content:space-evenly;
+    width:60%;
+    color:white;
 }
 
 /* /header */
