--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@ header {
 .header-links,
 .header-login {
     padding: 10px;
+    font-size:1.1rem;
 }
 
 .header-logo, .header-login {
@@ -79,7 +80,8 @@ header {
 /* hero */
 .hero {
     height: 500px;
-    background-color: #00008b;
+    background-image: url(../img/jumbo.png);
+    background-size:cover;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -87,9 +89,39 @@ header {
 
 .hero-container {
     width: 50%;
-    background-color: #ee82ee;
     height: 80%;
-    border: 3px dashed black;
+    color:white;
+    text-align:center;
+}
+
+h1 {
+    margin-top:100px;
+    font-size:3rem;
+}
+
+#intro {
+    font-size:1.4rem;
+    margin:2rem;
+}
+
+.download {
+    color:black;
+    background-color: white;
+    padding:15px;
+    border-radius: 30px;
+    font-size:1.4rem;
+}
+
+.open {
+    color:white;
+    background-color: #23272a;
+    padding:15px;
+    border-radius: 30px;
+    font-size:1.4rem;
+}
+
+.open, .download {
+    margin:0.5em;
 }
 
 /* /hero */
