--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,11 @@ hr {
 }
 
 img {
-    max-width:100%;
+    max-width: 100%;
 }
 
 a {
-    color:inherit;
+    color: inherit;
     text-decoration: none;
 }
 
@@ -27,7 +27,7 @@ a {
 }
 
 .grey {
-    background-color: #d3d3d3;
+    background-color: #f6f6f6;
 }
 
 /* header */
@@ -43,36 +43,37 @@ header {
     width: 60%;
     display: flex;
     justify-content: space-between;
-    align-items:center;
+    align-items: center;
 }
 
 .header-logo,
 .header-links,
 .header-login {
     padding: 10px;
-    font-size:1.1rem;
+    font-size: 1.1rem;
 }
 
-.header-logo, .header-login {
-    width:20%;
+.header-logo,
+.header-login {
+    width: 20%;
 }
 
 .header-login {
-    display:flex;
-    justify-content:flex-end;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .login {
     background-color: white;
-    padding:10px;
-    border-radius:20px;
+    padding: 10px;
+    border-radius: 20px;
 }
 
-.header-links { 
-    display:flex;
-    justify-content:space-evenly;
-    width:60%;
-    color:white;
+.header-links {
+    display: flex;
+    justify-content: space-evenly;
+    width: 60%;
+    color: white;
 }
 
 /* /header */
@@ -81,7 +82,7 @@ header {
 .hero {
     height: 500px;
     background-image: url(../img/jumbo.png);
-    background-size:cover;
+    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -90,38 +91,39 @@ header {
 .hero-container {
     width: 50%;
     height: 80%;
-    color:white;
-    text-align:center;
+    color: white;
+    text-align: center;
 }
 
 h1 {
-    margin-top:100px;
-    font-size:3rem;
+    margin-top: 100px;
+    font-size: 3rem;
 }
 
 #intro {
-    font-size:1.4rem;
-    margin:2rem;
+    font-size: 1.4rem;
+    margin: 2rem;
 }
 
 .download {
-    color:black;
+    color: black;
     background-color: white;
-    padding:15px;
+    padding: 15px;
     border-radius: 30px;
-    font-size:1.4rem;
+    font-size: 1.4rem;
 }
 
 .open {
-    color:white;
+    color: white;
     background-color: #23272a;
-    padding:15px;
+    padding: 15px;
     border-radius: 30px;
-    font-size:1.4rem;
+    font-size: 1.4rem;
 }
 
-.open, .download {
-    margin:0.5em;
+.open,
+.download {
+    margin: 0.5em;
 }
 
 /* /hero */
@@ -129,15 +131,12 @@ h1 {
 /* common */
 .img-column {
     width: 60%;
-    border-right: 3px dashed black;
-    background-color: #1e90ff;
-    border: 3px dashed black;
 }
 
 .text-column {
     width: 40%;
-    background-color: #ffc0cb;
-    border: 3px dashed black;
+    font-size: 1.4rem;
+
 }
 
 /* /common */
@@ -148,6 +147,10 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+h2 {
+    font-size: 3rem;
 }
 
 .section-container {
@@ -170,17 +173,40 @@ h1 {
 
 /* summary */
 .summary {
-    height: 1000px;
+    padding-bottom: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .summary-container {
-    width: 60%;
-    height: 80%;
-    background-color: #228b22;
-    border: 3px dashed black;
+
+    text-align: center;
+    font-size: 1.4rem;
+}
+
+h3 {
+    font-size: 2rem;
+}
+
+.prefooter-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+#stars-container {
+    width: 70%;
+    background-image: url(../img/stars.svg);
+    background-size: contain;
+}
+
+.prefooter-download {
+    color: white;
+    background-color: #648ae8;
+    padding: 15px;
+    border-radius: 30px;
+    font-size: 1.4rem;
 }
 
 /* /summary */
